// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInternalPaging tests change currentPage from click 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 140px;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 120px;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 80px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width: 80px;"
      >
        21
      </td>
      <td
        style="width: 140px;"
      >
        Chester A. Arthur
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1829
      </td>
      <td
        style="width: 80px;"
      >
        1886
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1881-09-19
      </td>
      <td
        style="width: 80px;"
      >
        1885-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        22
      </td>
      <td
        style="width: 140px;"
      >
        Grover Cleveland
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1837
      </td>
      <td
        style="width: 80px;"
      >
        1908
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1885-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1889-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        23
      </td>
      <td
        style="width: 140px;"
      >
        Benjamin Harrison
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1833
      </td>
      <td
        style="width: 80px;"
      >
        1901
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1889-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1893-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        24
      </td>
      <td
        style="width: 140px;"
      >
        Grover Cleveland
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1837
      </td>
      <td
        style="width: 80px;"
      >
        1908
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1893-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1897-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        25
      </td>
      <td
        style="width: 140px;"
      >
        William McKinley
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1843
      </td>
      <td
        style="width: 80px;"
      >
        1901
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1897-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1901-09-14
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          style="width: 100%;"
        >
          <tbody>
            <tr>
              <td
                style="width: 33%; font-weight: bold;"
              >
                25 Records
              </td>
              <td
                style="width: 34%; text-align: center;"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="2"
                    />
                  </span>
                    of 2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
              </td>
              <td
                style="width: 33%; text-align: right;"
              >
                Show: 
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`withInternalPaging tests change currentPage from props 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 140px;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 120px;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 80px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width: 80px;"
      >
        21
      </td>
      <td
        style="width: 140px;"
      >
        Chester A. Arthur
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1829
      </td>
      <td
        style="width: 80px;"
      >
        1886
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1881-09-19
      </td>
      <td
        style="width: 80px;"
      >
        1885-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        22
      </td>
      <td
        style="width: 140px;"
      >
        Grover Cleveland
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1837
      </td>
      <td
        style="width: 80px;"
      >
        1908
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1885-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1889-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        23
      </td>
      <td
        style="width: 140px;"
      >
        Benjamin Harrison
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1833
      </td>
      <td
        style="width: 80px;"
      >
        1901
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1889-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1893-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        24
      </td>
      <td
        style="width: 140px;"
      >
        Grover Cleveland
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1837
      </td>
      <td
        style="width: 80px;"
      >
        1908
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1893-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1897-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        25
      </td>
      <td
        style="width: 140px;"
      >
        William McKinley
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1843
      </td>
      <td
        style="width: 80px;"
      >
        1901
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1897-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1901-09-14
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          style="width: 100%;"
        >
          <tbody>
            <tr>
              <td
                style="width: 33%; font-weight: bold;"
              >
                25 Records
              </td>
              <td
                style="width: 34%; text-align: center;"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="2"
                    />
                  </span>
                    of 2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
              </td>
              <td
                style="width: 33%; text-align: right;"
              >
                Show: 
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`withInternalPaging tests render paging 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 140px;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 120px;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 80px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap; width: 80px;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width: 80px;"
      >
        1
      </td>
      <td
        style="width: 140px;"
      >
        George Washington
      </td>
      <td
        style="width: 120px;"
      >
        No Party
      </td>
      <td
        style="width: 80px;"
      >
        1732
      </td>
      <td
        style="width: 80px;"
      >
        1799
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1789-04-30
      </td>
      <td
        style="width: 80px;"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        2
      </td>
      <td
        style="width: 140px;"
      >
        John Adams
      </td>
      <td
        style="width: 120px;"
      >
        Federalist
      </td>
      <td
        style="width: 80px;"
      >
        1735
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1797-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        3
      </td>
      <td
        style="width: 140px;"
      >
        Thomas Jefferson
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1743
      </td>
      <td
        style="width: 80px;"
      >
        1826
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1801-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        4
      </td>
      <td
        style="width: 140px;"
      >
        James Madison
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1751
      </td>
      <td
        style="width: 80px;"
      >
        1836
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1809-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        5
      </td>
      <td
        style="width: 140px;"
      >
        James Monroe
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1758
      </td>
      <td
        style="width: 80px;"
      >
        1831
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1817-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1825-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        6
      </td>
      <td
        style="width: 140px;"
      >
        John Quincy Adams
      </td>
      <td
        style="width: 120px;"
      >
        Democratic-Republican
      </td>
      <td
        style="width: 80px;"
      >
        1767
      </td>
      <td
        style="width: 80px;"
      >
        1848
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1825-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1829-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        7
      </td>
      <td
        style="width: 140px;"
      >
        Andrew Jackson
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1767
      </td>
      <td
        style="width: 80px;"
      >
        1845
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1829-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1837-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        8
      </td>
      <td
        style="width: 140px;"
      >
        Martin Van Buren
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1782
      </td>
      <td
        style="width: 80px;"
      >
        1862
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1837-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1841-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        9
      </td>
      <td
        style="width: 140px;"
      >
        William Henry Harrison
      </td>
      <td
        style="width: 120px;"
      >
        Whig
      </td>
      <td
        style="width: 80px;"
      >
        1773
      </td>
      <td
        style="width: 80px;"
      >
        1841
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1841-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1841-04-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        10
      </td>
      <td
        style="width: 140px;"
      >
        John Tyler
      </td>
      <td
        style="width: 120px;"
      >
        Whig
      </td>
      <td
        style="width: 80px;"
      >
        1790
      </td>
      <td
        style="width: 80px;"
      >
        1862
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1841-04-04
      </td>
      <td
        style="width: 80px;"
      >
        1845-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        11
      </td>
      <td
        style="width: 140px;"
      >
        James K. Polk
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1795
      </td>
      <td
        style="width: 80px;"
      >
        1849
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1845-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1849-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        12
      </td>
      <td
        style="width: 140px;"
      >
        Zachary Taylor
      </td>
      <td
        style="width: 120px;"
      >
        Whig
      </td>
      <td
        style="width: 80px;"
      >
        1784
      </td>
      <td
        style="width: 80px;"
      >
        1850
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1849-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1850-07-09
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        13
      </td>
      <td
        style="width: 140px;"
      >
        Millard Fillmore
      </td>
      <td
        style="width: 120px;"
      >
        Whig
      </td>
      <td
        style="width: 80px;"
      >
        1800
      </td>
      <td
        style="width: 80px;"
      >
        1874
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1850-07-09
      </td>
      <td
        style="width: 80px;"
      >
        1853-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        14
      </td>
      <td
        style="width: 140px;"
      >
        Franklin Pierce
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1804
      </td>
      <td
        style="width: 80px;"
      >
        1869
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1853-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1857-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        15
      </td>
      <td
        style="width: 140px;"
      >
        James Buchanan
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1791
      </td>
      <td
        style="width: 80px;"
      >
        1868
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1857-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1861-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        16
      </td>
      <td
        style="width: 140px;"
      >
        Abraham Lincoln
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1809
      </td>
      <td
        style="width: 80px;"
      >
        1865
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1861-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1865-04-15
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        17
      </td>
      <td
        style="width: 140px;"
      >
        Andrew Johnson
      </td>
      <td
        style="width: 120px;"
      >
        Democratic
      </td>
      <td
        style="width: 80px;"
      >
        1808
      </td>
      <td
        style="width: 80px;"
      >
        1875
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1865-04-15
      </td>
      <td
        style="width: 80px;"
      >
        1869-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        18
      </td>
      <td
        style="width: 140px;"
      >
        Ulysses S. Grant
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1822
      </td>
      <td
        style="width: 80px;"
      >
        1885
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1869-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1877-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        19
      </td>
      <td
        style="width: 140px;"
      >
        Rutherford B. Hayes
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1822
      </td>
      <td
        style="width: 80px;"
      >
        1893
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1877-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1881-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width: 80px;"
      >
        20
      </td>
      <td
        style="width: 140px;"
      >
        James A. Garfield
      </td>
      <td
        style="width: 120px;"
      >
        Republican
      </td>
      <td
        style="width: 80px;"
      >
        1831
      </td>
      <td
        style="width: 80px;"
      >
        1881
      </td>
      <td
        style="width: 80px; text-align: right;"
      >
        1881-03-04
      </td>
      <td
        style="width: 80px;"
      >
        1881-09-19
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          style="width: 100%;"
        >
          <tbody>
            <tr>
              <td
                style="width: 33%; font-weight: bold;"
              >
                25 Records
              </td>
              <td
                style="width: 34%; text-align: center;"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="1"
                    />
                  </span>
                    of 2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none;"
                />
              </td>
              <td
                style="width: 33%; text-align: right;"
              >
                Show: 
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;
